# CustomGame-dev

./: .gitignore  CMakeLists.txt  CustomGame.code-workspace  LICENSE  Log.txt  README.md  main.cpp
Assets/LevelFiles/: HUD_load.gplevel  HUD_save.gplevel  HUD_save0.json  HUD_save1.json  Level0.gplevel  Level1.gplevel  Level2.gplevel  ResourceTree.json  SaveFile.gplevel  SaveFile.json  SaveFile0.json  SaveFile1.gplevel  SaveFile1.json  UITree_menu1.json  backup1.json
Assets/Meshes/: Box.gpmesh  Cube.gpmesh  Fox.gpmesh  Plane.gpmesh  PointLight.gpmesh  RacingCar.gpmesh  Rifle.gpmesh  Sphere.gpmesh  SpotLight.gpmesh  Target.gpmesh
Exporter/Blender/Addons/Addon1/: gpmesh_export.py
Shaders/: Basic.frag  Basic.vert  BasicMesh.frag  Font.frag  Font.vert  GBufferGlobal.frag  GBufferPointLight.frag  GBufferWrite.frag  Phong.frag  Phong.vert  Skinned.vert  Transform.vert
include/: Game.h
include/Actors/: Actor.h  Asteroid.h  BallActor.h  CameraActor.h  FPSActor.h  FollowActor.h  Laser.h  OrbitActor.h  PlaneActor.h  Ship.h  SphereActor.h  SplineActor.h  TargetActor.h
include/Audios/: AudioSystem.h  SoundEvent.h
include/Components/: AudioComponent.h  BallMove.h  BoxComponent.h  CameraComponent.h  CircleComponent.h  Component.h  FPSCamera.h  FollowCamera.h  InputComponent.h  MeshComponent.h  MirrorCamera.h  MoveComponent.h  OrbitCamera.h  PointLightComponent.h  SkeletalMeshComponent.h  SplineCamera.h  SpriteComponent.h  TargetComponent.h
include/General/: Cmath.h  DebugManager.h  LevelLoader.h  Random.h  ResourceManager.h  TreeStruct.h
include/Renderers/: Animation.h  Button.h  Collision.h  Console.h  DialogBox.h  EmptySprite.h  Font.h  FreeTypeFont.h  GBuffer.h  Graphics2d.h  Graphics3d.h  HUD.h  MenuTree.h  Mesh.h  PauseMenu.h  PhysWorld.h  PropertyMenu.h  Renderer.h  ResourceMenu.h  Setting.h  Shader.h  Skeleton.h  TextButton.h  Texture.h  UIScreen.h  VertexArray.h
src/: Game.cpp
src/Actors/: Actor.cpp  Asteroid.cpp  BallActor.cpp  CameraActor.cpp  FPSActor.cpp  FollowActor.cpp  Laser.cpp  OrbitActor.cpp  PlaneActor.cpp  Ship.cpp  SphereActor.cpp  SplineActor.cpp  TargetActor.cpp
src/Audios/: AudioSystem.cpp  SoundEvent.cpp
src/Components/: AudioComponent.cpp  BallMove.cpp  BoxComponent.cpp  CameraComponent.cpp  CircleComponent.cpp  Component.cpp  FPSCamera.cpp  FollowCamera.cpp  InputComponent.cpp  MeshComponent.cpp  MirrorCamera.cpp  MoveComponent.cpp  OrbitCamera.cpp  PointLightComponent.cpp  SkeletalMeshComponent.cpp  SplineCamera.cpp  SpriteComponent.cpp  TargetComponent.cpp
src/General/: CMath.cpp  DebugManager.cpp  LevelLoader.cpp  Random.cpp  ResourceManager.cpp  TreeStruct.cpp
src/Renderers/: Animation.cpp  Button.cpp  Collision.cpp  Console.cpp  DialogBox.cpp  EmptySprite.cpp  Font.cpp  FreeTypeFont.cpp  GBuffer.cpp  Graphics2d.cpp  Graphics3d.cpp  HUD.cpp  MenuTree.cpp  Mesh.cpp  PauseMenu.cpp  PhysWorld.cpp  PropertyMenu.cpp  Renderer.cpp  ResourceMenu.cpp  Setting.cpp  Shader.cpp  Skeleton.cpp  TextButton.cpp  Texture.cpp  UIScreen.cpp  VertexArray.cpp
